--- a/scilab/Makefile.in
+++ b/scilab/Makefile.in
@@ -52,9 +52,6 @@ bin_PROGRAMS = scilab-bin$(EXEEXT) scilab-cli-bin$(EXEEXT) \
 
 #-static
 @ENABLE_STATIC_TRUE@am__append_2 = scilab-static-bin
-
-#  The user wants to compile the localization files
-@GENERATE_LOCALIZATION_FILES_TRUE@am__append_3 = localization
 check_PROGRAMS = call_scilab_c_simple$(EXEEXT) call_scilab_c$(EXEEXT) \
 	call_scilab_c_getlastjob$(EXEEXT) \
 	call_scilab_c_DisableInteractiveMode$(EXEEXT) \
@@ -589,7 +586,7 @@ $(top_builddir)/modules/functions_manager/libscifunctions_manager.la \
 $(top_builddir)/modules/core/libscicore.la
 
 LANG_DOMAIN = scilab
-TARGETS_ALL = macros $(am__append_3)
+TARGETS_ALL = macros
 rootdir = $(pkgdatadir)/etc/
 root_DATA = $(top_srcdir)/etc/scilab.start \
 $(top_srcdir)/etc/scilab.quit \
@@ -631,6 +628,25 @@ valgrind_DATA = $(top_srcdir)/tools/profiling/valgrind.supp
 
 # Used for mac os x because it needs to remove the charset=UTF-8 because it is breaking the accents.
 @IS_MACOSX_TRUE@MACOSX = 1
+#	@echo "-- Build localization (.mo from .po) --"; \
+#	MASK="modules/*/locales/"; \
+#	LC="LC_MESSAGES"; \
+#	MSGFMT_OPTS="$MSGFMT_OPTS --check"; \
+#	FILENAME="*.po*"; \
+#	rm modules/*/locales/*/*~ 2> /dev/null; \
+#	for LOCALE in $(ALL_LINGUAS); do \
+#		echo "        -- Building for $$LOCALE --"; \
+#		FILES=`ls $$MASK/$$LOCALE/$$FILENAME`; \
+#		PATHTO=$(top_builddir)/locale/$$LOCALE/$$LC/; \
+#		if test ! -d $$PATHTO; then \
+#			echo "        Creating $$PATHTO"; \
+#			mkdir -p $$PATHTO; \
+#		fi; \
+#		POFILE=$$PATHTO/$(LANG_DOMAIN).po; \
+#		$(MSGCAT) -o $$POFILE $$FILES; \
+#		if test "$(MACOSX)" = "1"; then sed -i -e '/charset=UTF-8/d' $$POFILE; fi; \
+#		$(MSGFMT) $(MSGFMT_OPTS) --statistics -o $$PATHTO/$(LANG_DOMAIN).mo $$POFILE; \
+#	done;
 
 # Misc variable for the documentation installation
 
@@ -1583,26 +1599,34 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
 # The binary itself needs this dep
 @IS_SOLARIS_TRUE@	scilab_bin_LDADD += $(BLAS_LIBS)
 
+#  The user wants to compile the localization files
+#TARGETS_ALL+=localization
+
 all-local: $(TARGETS_ALL)
 
-macros:$(top_builddir)/scilab-cli-bin $(top_builddir)/bin/scilab-cli
-	-@( cd $(top_builddir) ; \
-	echo "$(top_builddir)/bin/scilab-cli -ns -f modules/functions/scripts/buildmacros/buildmacros.sce" ; \
-	$(top_builddir)/bin/scilab-cli -ns -f modules/functions/scripts/buildmacros/buildmacros.sce)
+macros:
+#$(top_builddir)/scilab-cli-bin $(top_builddir)/bin/scilab-cli
+#	-@( cd $(top_builddir) ; \
+#	echo "$(top_builddir)/bin/scilab-cli -ns -f modules/functions/scripts/buildmacros/buildmacros.sce" ; \
+#	$(top_builddir)/bin/scilab-cli -ns -f modules/functions/scripts/buildmacros/buildmacros.sce)
 
-doc:$(top_builddir)/scilab-bin $(top_builddir)/bin/scilab-adv-cli
-@BUILD_HELP_TRUE@	-@if test -x $(top_builddir)/scilab-bin; then \
-@BUILD_HELP_TRUE@		cd $(top_builddir);\
-@BUILD_HELP_TRUE@		echo "-- Building documentation (English) --"; \
-@BUILD_HELP_TRUE@		echo "LANG=C SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -nouserstartup -e \"xmltojar([],[],'en_US');exit;\"";\
-@BUILD_HELP_TRUE@		LANG=C SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -l en_US -nouserstartup -e "xmltojar([],[],'en_US');exit;";\
-@BUILD_HELP_TRUE@		echo "-- Building documentation (French) --"; \
-@BUILD_HELP_TRUE@		echo "SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -nouserstartup -e \"xmltojar([],[],'fr_FR');exit;\""; \
-@BUILD_HELP_TRUE@		SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -nouserstartup -e "xmltojar([],[],'fr_FR');exit;"; \
-@BUILD_HELP_TRUE@	else \
-@BUILD_HELP_TRUE@		echo "Cannot find Scilab-adv-cli binary"; \
-@BUILD_HELP_TRUE@	fi
-@BUILD_HELP_FALSE@	@echo "Cannot buid help. Add --enable-build-help to the ./configure if you want to build it."
+doc:
+#$(top_builddir)/scilab-bin $(top_builddir)/bin/scilab-adv-cli
+#if BUILD_HELP
+#	-@if test -x $(top_builddir)/scilab-bin; then \
+#		cd $(top_builddir);\
+#		echo "-- Building documentation (English) --"; \
+#		echo "LANG=C SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -nouserstartup -e \"xmltojar([],[],'en_US');exit;\"";\
+#		LANG=C SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -l en_US -nouserstartup -e "xmltojar([],[],'en_US');exit;";\
+#		echo "-- Building documentation (French) --"; \
+#		echo "SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -nouserstartup -e \"xmltojar([],[],'fr_FR');exit;\""; \
+#		SCI_DISABLE_TK=1 SCI_JAVA_ENABLE_HEADLESS=1 DOCBOOK_ROOT=$(DOCBOOK_ROOT) $(top_builddir)/bin/scilab-adv-cli -nb -nouserstartup -e "xmltojar([],[],'fr_FR');exit;"; \
+#	else \
+#		echo "Cannot find Scilab-adv-cli binary"; \
+#	fi
+#else
+#	@echo "Cannot buid help. Add --enable-build-help to the ./configure if you want to build it."
+#endif
 
 check-help:$(top_builddir)/scilab-cli-bin $(top_builddir)/bin/scilab-cli
 	@if test -x $(top_builddir)/scilab-cli-bin; then \
@@ -1674,25 +1698,6 @@ distclean-generated:
 # The user wants to compile the localization files
 # Please note that ALL_LINGUAS is defined in configure.ac
 @GENERATE_LOCALIZATION_FILES_TRUE@localization:
-@GENERATE_LOCALIZATION_FILES_TRUE@	@echo "-- Build localization (.mo from .po) --"; \
-@GENERATE_LOCALIZATION_FILES_TRUE@	MASK="modules/*/locales/"; \
-@GENERATE_LOCALIZATION_FILES_TRUE@	LC="LC_MESSAGES"; \
-@GENERATE_LOCALIZATION_FILES_TRUE@	MSGFMT_OPTS="$MSGFMT_OPTS --check"; \
-@GENERATE_LOCALIZATION_FILES_TRUE@	FILENAME="*.po*"; \
-@GENERATE_LOCALIZATION_FILES_TRUE@	rm modules/*/locales/*/*~ 2> /dev/null; \
-@GENERATE_LOCALIZATION_FILES_TRUE@	for LOCALE in $(ALL_LINGUAS); do \
-@GENERATE_LOCALIZATION_FILES_TRUE@		echo "        -- Building for $$LOCALE --"; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		FILES=`ls $$MASK/$$LOCALE/$$FILENAME`; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		PATHTO=$(top_builddir)/locale/$$LOCALE/$$LC/; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		if test ! -d $$PATHTO; then \
-@GENERATE_LOCALIZATION_FILES_TRUE@			echo "        Creating $$PATHTO"; \
-@GENERATE_LOCALIZATION_FILES_TRUE@			mkdir -p $$PATHTO; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		fi; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		POFILE=$$PATHTO/$(LANG_DOMAIN).po; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		$(MSGCAT) -o $$POFILE $$FILES; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		if test "$(MACOSX)" = "1"; then sed -i -e '/charset=UTF-8/d' $$POFILE; fi; \
-@GENERATE_LOCALIZATION_FILES_TRUE@		$(MSGFMT) $(MSGFMT_OPTS) --statistics -o $$PATHTO/$(LANG_DOMAIN).mo $$POFILE; \
-@GENERATE_LOCALIZATION_FILES_TRUE@	done;
 
 @GENERATE_LOCALIZATION_FILES_TRUE@install-data-local:
 @GENERATE_LOCALIZATION_FILES_TRUE@	@$(mkinstalldirs) $(DESTDIR)$(localedir); \
