--- a/scilab/modules/elementary_functions/Makefile.am
+++ b/scilab/modules/elementary_functions/Makefile.am
@@ -405,6 +405,7 @@ libscielementary_functions_la_CPPFLAGS = 	-I$(srcdir)/includes/ \
 	-I$(top_builddir)/modules/types/includes \
 	-I$(top_builddir)/modules/operations/includes \
 	-I$(top_builddir)/modules/abstractSyntaxTree/includes \
+	-I$(top_builddir)/modules/api_scilab/includes \
 	-I$(top_builddir)/modules/symbol/includes
 
 
