--- a/scilab/modules/api_scilab/Makefile.in
+++ b/scilab/modules/api_scilab/Makefile.in
@@ -104,7 +104,8 @@ am__objects_1 = libsciapi_scilab_la-api_boolean.lo \
 	libsciapi_scilab_la-api_poly.lo \
 	libsciapi_scilab_la-api_sparse.lo \
 	libsciapi_scilab_la-api_string.lo \
-	libsciapi_scilab_la-api_pointer.lo
+	libsciapi_scilab_la-api_pointer.lo \
+	libsciapi_scilab_la-api_oldstack.lo
 am_libsciapi_scilab_la_OBJECTS = $(am__objects_1)
 libsciapi_scilab_la_OBJECTS = $(am_libsciapi_scilab_la_OBJECTS)
 libsciapi_scilab_la_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
@@ -377,7 +378,8 @@ src/cpp/api_list.cpp \
 src/cpp/api_poly.cpp \
 src/cpp/api_sparse.cpp \
 src/cpp/api_string.cpp \
-src/cpp/api_pointer.cpp
+src/cpp/api_pointer.cpp \
+src/cpp/api_oldstack.cpp 
 
 libsciapi_scilab_la_CFLAGS = -I$(srcdir)/includes/ \
 -I$(srcdir)/src/c/ \
@@ -387,6 +389,9 @@ libsciapi_scilab_la_CFLAGS = -I$(srcdir)/includes/ \
 -I$(top_srcdir)/modules/localization/includes \
 -I$(top_srcdir)/modules/output_stream/includes \
 -I$(top_srcdir)/modules/string/includes \
+-I$(top_srcdir)/modules/types/includes \
+-I$(top_srcdir)/modules/symbol/includes \
+-I$(top_srcdir)/modules/abstractSyntaxTree/includes \
 -I$(top_srcdir)/modules/operations/includes
 
 libsciapi_scilab_la_CPPFLAGS = -I$(srcdir)/includes/ \
@@ -397,6 +402,9 @@ libsciapi_scilab_la_CPPFLAGS = -I$(srcdir)/includes/ \
 -I$(top_srcdir)/modules/localization/includes \
 -I$(top_srcdir)/modules/output_stream/includes \
 -I$(top_srcdir)/modules/operations/includes \
+-I$(top_srcdir)/modules/types/includes \
+-I$(top_srcdir)/modules/symbol/includes \
+-I$(top_srcdir)/modules/abstractSyntaxTree/includes \
 -I$(top_srcdir)/modules/string/includes
 
 pkglib_LTLIBRARIES = libsciapi_scilab.la
@@ -572,6 +580,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciapi_scilab_la-api_double.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciapi_scilab_la-api_int.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciapi_scilab_la-api_list.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciapi_scilab_la-api_oldstack.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciapi_scilab_la-api_pointer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciapi_scilab_la-api_poly.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libsciapi_scilab_la-api_sparse.Plo@am__quote@
@@ -667,6 +676,13 @@ libsciapi_scilab_la-api_pointer.lo: src/cpp/api_pointer.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/api_pointer.cpp' object='libsciapi_scilab_la-api_pointer.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libsciapi_scilab_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libsciapi_scilab_la-api_pointer.lo `test -f 'src/cpp/api_pointer.cpp' || echo '$(srcdir)/'`src/cpp/api_pointer.cpp
+
+libsciapi_scilab_la-api_oldstack.lo: src/cpp/api_oldstack.cpp
+@am__fastdepCXX_TRUE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libsciapi_scilab_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libsciapi_scilab_la-api_oldstack.lo -MD -MP -MF $(DEPDIR)/libsciapi_scilab_la-api_oldstack.Tpo -c -o libsciapi_scilab_la-api_oldstack.lo `test -f 'src/cpp/api_oldstack.cpp' || echo '$(srcdir)/'`src/cpp/api_oldstack.cpp
+@am__fastdepCXX_TRUE@	mv -f $(DEPDIR)/libsciapi_scilab_la-api_oldstack.Tpo $(DEPDIR)/libsciapi_scilab_la-api_oldstack.Plo
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/cpp/api_oldstack.cpp' object='libsciapi_scilab_la-api_oldstack.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libsciapi_scilab_la_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libsciapi_scilab_la-api_oldstack.lo `test -f 'src/cpp/api_oldstack.cpp' || echo '$(srcdir)/'`src/cpp/api_oldstack.cpp
 
 mostlyclean-libtool:
 	-rm -f *.lo
