--- a/scilab/modules/output_stream/src/c/output_stream.vcproj
+++ b/scilab/modules/output_stream/src/c/output_stream.vcproj
@@ -515,6 +515,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\cpp\DiaryModesEnum.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\includes\errmds.h"
 				>
 			</File>
