--- a/scilab/modules/optimization/Makefile.in
+++ b/scilab/modules/optimization/Makefile.in
@@ -113,7 +113,7 @@ am__objects_2 = gcbd.lo qpgen2.lo n1qn2a.lo fuclid.lo fmc11b.lo \
 	icse1.lo ctonb.lo icscof.lo fmlag1.lo fpq2.lo n1fc1.lo \
 	ffinf1.lo ctcab.lo n1gc2b.lo fprf2.lo fremf1.lo icse.lo \
 	rlbd.lo calmaj.lo calbx.lo rednor.lo zgcbd.lo writebuf.lo \
-	dpofa.lo qpgen1sci.lo util.lo
+	qpgen1sci.lo
 am__objects_3 = libscioptimization_la-sci_semidef.lo \
 	libscioptimization_la-sci_qld.lo \
 	libscioptimization_la-gw_optimization.lo \
@@ -457,9 +457,7 @@ src/fortran/calbx.f \
 src/fortran/rednor.f \
 src/fortran/zgcbd.f \
 src/fortran/writebuf.f \
-src/fortran/dpofa.f \
-src/fortran/qpgen1sci.f \
-src/fortran/util.f
+src/fortran/qpgen1sci.f
 
 MINPACK_SOURCES = src/fortran/minpack/lmdif.f \
 src/fortran/minpack/qrfac.f \
@@ -978,14 +976,8 @@ zgcbd.lo: src/fortran/zgcbd.f
 writebuf.lo: src/fortran/writebuf.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o writebuf.lo `test -f 'src/fortran/writebuf.f' || echo '$(srcdir)/'`src/fortran/writebuf.f
 
-dpofa.lo: src/fortran/dpofa.f
-	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o dpofa.lo `test -f 'src/fortran/dpofa.f' || echo '$(srcdir)/'`src/fortran/dpofa.f
-
 qpgen1sci.lo: src/fortran/qpgen1sci.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o qpgen1sci.lo `test -f 'src/fortran/qpgen1sci.f' || echo '$(srcdir)/'`src/fortran/qpgen1sci.f
-
-util.lo: src/fortran/util.f
-	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o util.lo `test -f 'src/fortran/util.f' || echo '$(srcdir)/'`src/fortran/util.f
 
 sci_f_semidef.lo: sci_gateway/fortran/sci_f_semidef.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o sci_f_semidef.lo `test -f 'sci_gateway/fortran/sci_f_semidef.f' || echo '$(srcdir)/'`sci_gateway/fortran/sci_f_semidef.f
