get keywords from scilab to xpad

--- a/scilab/modules/completion/src/c/completion.vcproj
+++ b/scilab/modules/completion/src/c/completion.vcproj
@@ -467,7 +467,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\getmacrosdictionary.h"
+				RelativePath="..\..\includes\getmacrosdictionary.h"
 				>
 			</File>
 			<File
