--- a/scilab/modules/xpad/Makefile.in
+++ b/scilab/modules/xpad/Makefile.in
@@ -109,12 +109,13 @@ libscixpad_la_DEPENDENCIES =  \
 	$(top_builddir)/modules/core/libscicore.la \
 	$(top_builddir)/libs/MALLOC/libscimalloc.la \
 	$(top_builddir)/modules/output_stream/libscioutput_stream.la
-am__objects_2 =
-am__objects_3 = libscixpad_la-gw_xpad.lo
-am__objects_4 = libscixpad_la-sci_xpad.lo
-am__objects_5 = libscixpad_la-Xpad.lo libscixpad_la-callxpad.lo
+am__objects_2 = libscixpad_la-ScilabKeywords.lo
+am__objects_3 = libscixpad_la-ScilabKeywords_wrap.lo
+am__objects_4 = libscixpad_la-gw_xpad.lo
+am__objects_5 = libscixpad_la-sci_xpad.lo
+am__objects_6 = libscixpad_la-Xpad.lo libscixpad_la-callxpad.lo
 am_libscixpad_la_OBJECTS = $(am__objects_2) $(am__objects_3) \
-	$(am__objects_4) $(am__objects_5)
+	$(am__objects_4) $(am__objects_5) $(am__objects_6)
 libscixpad_la_OBJECTS = $(am_libscixpad_la_OBJECTS)
 libscixpad_la_LINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CXXLD) $(AM_CXXFLAGS) \
@@ -451,10 +452,12 @@ JARMASK = *.jar
 HELP_CHAPTERDIR = help/
 HELP_CHAPTERFILE = addchapter.sce
 HELP_CHAPTERLANG = en_US fr_FR pt_BR
-XPAD_C_SOURCES = 
+XPAD_JNI_SOURCES = src/jni/ScilabKeywords_wrap.c
+XPAD_C_SOURCES = src/c/ScilabKeywords.c
 XPAD_CPP_SOURCES = src/jni/Xpad.cpp src/cpp/callxpad.cpp
 GIWS_WRAPPERS = Xpad.giws.xml
 @GIWS_TRUE@BUILT_SOURCES = giws
+@SWIG_TRUE@BUILT_SOURCES = swig
 GATEWAY_C_SOURCES = sci_gateway/c/gw_xpad.c
 GATEWAY_CPP_SOURCES = sci_gateway/cpp/sci_xpad.cpp
 libscixpad_la_CFLAGS = $(JAVA_JNI_INCLUDE) \
@@ -484,11 +487,14 @@ libscixpad_disable_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) $(LD_FLA
 libscixpad_disable_la_SOURCES = $(XPAD_DISABLE_C_SOURCES)
 pkglib_LTLIBRARIES = libscixpad-disable.la $(am__append_2)
 libscixpad_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) $(LD_FLAGS)  $(X_LIBS) $(X_EXTRA_LIBS)
-libscixpad_la_SOURCES = $(XPAD_C_SOURCES) $(GATEWAY_C_SOURCES) $(GATEWAY_CPP_SOURCES) $(XPAD_CPP_SOURCES)
+libscixpad_la_SOURCES = $(XPAD_C_SOURCES) $(XPAD_JNI_SOURCES) $(GATEWAY_C_SOURCES) $(GATEWAY_CPP_SOURCES) $(XPAD_CPP_SOURCES)
 
 # For the code check (splint)
 CHECK_SRC = $(XPAD_C_SOURCES) $(GATEWAY_C_SOURCES)
 INCLUDE_FLAGS = $(libscixpad_la_CFLAGS)
+
+#### SWIG Declaration ####
+SWIG_WRAPPERS = src/jni/ScilabKeywords.i 
 libscixpad_la_LIBADD = $(top_builddir)/modules/core/libscicore.la \
 $(top_builddir)/libs/MALLOC/libscimalloc.la \
 $(top_builddir)/modules/output_stream/libscioutput_stream.la
@@ -578,6 +584,8 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_disable_la-noxpad.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-ScilabKeywords.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-ScilabKeywords_wrap.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-Xpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-callxpad.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libscixpad_la-gw_xpad.Plo@am__quote@
@@ -610,6 +618,20 @@ libscixpad_disable_la-noxpad.lo: src/noxpad/noxpad.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/noxpad/noxpad.c' object='libscixpad_disable_la-noxpad.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libscixpad_disable_la_CFLAGS) $(CFLAGS) -c -o libscixpad_disable_la-noxpad.lo `test -f 'src/noxpad/noxpad.c' || echo '$(srcdir)/'`src/noxpad/noxpad.c
+
+libscixpad_la-ScilabKeywords.lo: src/c/ScilabKeywords.c
+@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(libscixpad_la_CFLAGS) $(CFLAGS) -MT libscixpad_la-ScilabKeywords.lo -MD -MP -MF $(DEPDIR)/libscixpad_la-ScilabKeywords.Tpo -c -o libscixpad_la-ScilabKeywords.lo `test -f 'src/c/ScilabKeywords.c' || echo '$(srcdir)/'`src/c/ScilabKeywords.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libscixpad_la-ScilabKeywords.Tpo $(DEPDIR)/libscixpad_la-ScilabKeywords.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/c/ScilabKeywords.c' object='libscixpad_la-ScilabKeywords.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(libscixpad_la_CFLAGS) $(CFLAGS) -c -o libscixpad_la-ScilabKeywords.lo `test -f 'src/c/ScilabKeywords.c' || echo '$(srcdir)/'`src/c/ScilabKeywords.c
+
+libscixpad_la-ScilabKeywords_wrap.lo: src/jni/ScilabKeywords_wrap.c
+@am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(libscixpad_la_CFLAGS) $(CFLAGS) -MT libscixpad_la-ScilabKeywords_wrap.lo -MD -MP -MF $(DEPDIR)/libscixpad_la-ScilabKeywords_wrap.Tpo -c -o libscixpad_la-ScilabKeywords_wrap.lo `test -f 'src/jni/ScilabKeywords_wrap.c' || echo '$(srcdir)/'`src/jni/ScilabKeywords_wrap.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/libscixpad_la-ScilabKeywords_wrap.Tpo $(DEPDIR)/libscixpad_la-ScilabKeywords_wrap.Plo
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='src/jni/ScilabKeywords_wrap.c' object='libscixpad_la-ScilabKeywords_wrap.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(libscixpad_la_CFLAGS) $(CFLAGS) -c -o libscixpad_la-ScilabKeywords_wrap.lo `test -f 'src/jni/ScilabKeywords_wrap.c' || echo '$(srcdir)/'`src/jni/ScilabKeywords_wrap.c
 
 libscixpad_la-gw_xpad.lo: sci_gateway/c/gw_xpad.c
 @am__fastdepCC_TRUE@	$(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libscixpad_la_CPPFLAGS) $(CPPFLAGS) $(libscixpad_la_CFLAGS) $(CFLAGS) -MT libscixpad_la-gw_xpad.lo -MD -MP -MF $(DEPDIR)/libscixpad_la-gw_xpad.Tpo -c -o libscixpad_la-gw_xpad.lo `test -f 'sci_gateway/c/gw_xpad.c' || echo '$(srcdir)/'`sci_gateway/c/gw_xpad.c
@@ -1116,6 +1138,8 @@ distclean-local:
 	rm -f $(builddir)/help/*/.last_successful_build_javaHelp $(builddir)/help/*/.list_*
 
 .PHONY: macros java swig giws
+			-I$(top_srcdir)/modules/core/includes \
+			-I$(top_srcdir)/modules/completion/includes
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
