--- a/scilab/modules/xpad/Makefile.am
+++ b/scilab/modules/xpad/Makefile.am
@@ -48,7 +48,7 @@ libscixpad_la_CFLAGS= $(JAVA_JNI_INCLUDE) \
 			-I$(top_srcdir)/modules/jvm/includes/ \
 			-I$(top_srcdir)/modules/output_stream/includes \
 			-I$(top_srcdir)/modules/localization/includes \
-			-I$(top_srcdir)/modules/api_scilab/includes
+			-I$(top_srcdir)/modules/api_scilab/includes \
 			-I$(top_srcdir)/modules/core/includes \
 			-I$(top_srcdir)/modules/completion/includes
 
