--- a/scilab/modules/xpad/src/java/xpad-JAVA.vcproj
+++ b/scilab/modules/xpad/src/java/xpad-JAVA.vcproj
@@ -108,6 +108,10 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\org\scilab\modules\xpad\ScilabKeywords.java"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\build.xml"
