add NULL @ end of char array (swig)

--- a/scilab/modules/xpad/src/java/xpad-JAVA.vcproj
+++ b/scilab/modules/xpad/src/java/xpad-JAVA.vcproj
@@ -112,6 +112,10 @@
 				RelativePath=".\org\scilab\modules\xpad\ScilabKeywords.java"
 				>
 			</File>
+			<File
+				RelativePath=".\org\scilab\modules\xpad\ScilabKeywordsJNI.java"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\build.xml"
