--- a/scilab/modules/fftw/Makefile.am
+++ b/scilab/modules/fftw/Makefile.am
@@ -59,6 +59,7 @@ libscifftw_la_CFLAGS=  	-I$(srcdir)/includes/ \
 			-I$(top_srcdir)/modules/fileio/includes/ \
 			-I$(top_srcdir)/modules/output_stream/includes \
 			-I$(top_srcdir)/modules/operations/includes \
+			-I$(top_srcdir)/modules/api_scilab/includes \
 			$(FFTW3_CFLAGS)
 
 #### fftw : include files ####
