Lhs != 1, fake stack, macro function call and start of elem_func sas

--- a/scilab/modules/elementary_functions/src/cpp/elem_func_gw/elem_func_gw.vcproj
+++ b/scilab/modules/elementary_functions/src/cpp/elem_func_gw/elem_func_gw.vcproj
@@ -362,7 +362,15 @@
 			>
 		</Filter>
 		<File
+			RelativePath="..\..\..\..\..\bin\blasplus.lib"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\..\..\bin\lapack.lib"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\..\..\bin\libintl.lib"
 			>
 		</File>
 	</Files>
