move files (bug 4736)

--- a/scilab/modules/randlib/src/fortran/randlib_f2c.vcproj
+++ b/scilab/modules/randlib/src/fortran/randlib_f2c.vcproj
@@ -6,6 +6,7 @@
 	ProjectGUID="{BB8D4E6F-F09E-49FC-8BCB-9F496F639F60}"
 	RootNamespace="randlib_f2c"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="0"
 	>
 	<Platforms>
 		<Platform
@@ -456,19 +457,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\sdot.c"
-				>
-			</File>
-			<File
 				RelativePath=".\setgmn.c"
 				>
 			</File>
 			<File
 				RelativePath=".\snorm.c"
-				>
-			</File>
-			<File
-				RelativePath=".\spofa.c"
 				>
 			</File>
 		</Filter>
@@ -544,19 +537,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\sdot.f"
-				>
-			</File>
-			<File
 				RelativePath=".\setgmn.f"
 				>
 			</File>
 			<File
 				RelativePath=".\snorm.f"
-				>
-			</File>
-			<File
-				RelativePath=".\spofa.f"
 				>
 			</File>
 		</Filter>
