--- a/scilab/modules/differential_equations/Makefile.in
+++ b/scilab/modules/differential_equations/Makefile.in
@@ -116,11 +116,11 @@ am__objects_2 = rscar1.lo bcomp.lo lcomp.lo loren.lo prja.lo vnorm.lo \
 	solsy.lo lsodi.lo ddassl.lo order.lo epsalg.lo cfode.lo \
 	rscma1.lo colnew.lo dcutet.lo xsetf.lo dgbsl.lo rkf45.lo \
 	rchek.lo dqag0.lo xerrwv.lo twodq.lo dqags.lo greatr.lo \
-	hpdel.lo hpins.lo svcar1.lo daux.lo dgbfa.lo rscom1.lo \
-	rksimp.lo roots.lo stoda.lo bnorm.lo rchek2.lo stode.lo \
-	vmnorm.lo prepj.lo lsdisc.lo fnorm.lo ddasrt.lo stodi.lo \
-	xsetun.lo intdy.lo ewset.lo roots2.lo prepji.lo svcma1.lo \
-	lsrgk.lo odeint.lo rkqc.lo writbufode.lo
+	hpdel.lo hpins.lo svcar1.lo daux.lo rscom1.lo rksimp.lo \
+	roots.lo stoda.lo bnorm.lo rchek2.lo stode.lo vmnorm.lo \
+	prepj.lo lsdisc.lo fnorm.lo ddasrt.lo stodi.lo xsetun.lo \
+	intdy.lo ewset.lo roots2.lo prepji.lo svcma1.lo lsrgk.lo \
+	odeint.lo rkqc.lo writbufode.lo
 am__objects_3 = libscidifferential_equations_la-sci_int2d.lo \
 	libscidifferential_equations_la-sci_int3d.lo \
 	libscidifferential_equations_la-sci_intg.lo \
@@ -449,7 +449,6 @@ src/fortran/hpdel.f \
 src/fortran/hpins.f \
 src/fortran/svcar1.f \
 src/fortran/daux.f \
-src/fortran/dgbfa.f \
 src/fortran/rscom1.f \
 src/fortran/rksimp.f \
 src/fortran/roots.f \
@@ -1025,9 +1024,6 @@ svcar1.lo: src/fortran/svcar1.f
 
 daux.lo: src/fortran/daux.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o daux.lo `test -f 'src/fortran/daux.f' || echo '$(srcdir)/'`src/fortran/daux.f
-
-dgbfa.lo: src/fortran/dgbfa.f
-	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o dgbfa.lo `test -f 'src/fortran/dgbfa.f' || echo '$(srcdir)/'`src/fortran/dgbfa.f
 
 rscom1.lo: src/fortran/rscom1.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(AM_FFLAGS) $(FFLAGS) -c -o rscom1.lo `test -f 'src/fortran/rscom1.f' || echo '$(srcdir)/'`src/fortran/rscom1.f
