--- a/scilab/modules/elementary_functions/Makefile.in
+++ b/scilab/modules/elementary_functions/Makefile.in
@@ -195,7 +195,18 @@ am__objects_1 = libscielementary_functions_la-zwrsk.lo \
 am__objects_2 = libscielementary_functions_la-dgesl.lo \
 	libscielementary_functions_la-wpade.lo \
 	libscielementary_functions_la-wcopy.lo \
-	libscielementary_functions_la-dgefa.lo
+	libscielementary_functions_la-dgefa.lo \
+	libscielementary_functions_la-dgbfa.lo \
+	libscielementary_functions_la-dgeco.lo \
+	libscielementary_functions_la-dgedi.lo \
+	libscielementary_functions_la-dqrdc.lo \
+	libscielementary_functions_la-dqrsl.lo \
+	libscielementary_functions_la-dqrsm.lo \
+	libscielementary_functions_la-hhdml.lo \
+	libscielementary_functions_la-spofa.lo \
+	libscielementary_functions_la-wgeco.lo \
+	libscielementary_functions_la-wgefa.lo \
+	libscielementary_functions_la-wgesl.lo
 am__objects_3 = libscielementary_functions_la-sci_tools.lo \
 	libscielementary_functions_la-finite.lo \
 	libscielementary_functions_la-vfinite.lo \
@@ -348,7 +359,8 @@ am__objects_4 = libscielementary_functions_la-psi.lo \
 	libscielementary_functions_la-ribesl.lo \
 	libscielementary_functions_la-rjbesl.lo \
 	libscielementary_functions_la-rkbesl.lo \
-	libscielementary_functions_la-rybesl.lo
+	libscielementary_functions_la-rybesl.lo \
+	libscielementary_functions_la-sdot.lo
 am__objects_5 = libscielementary_functions_la-sci_isequal.lo \
 	libscielementary_functions_la-sci_matrix.lo \
 	libscielementary_functions_la-sci_prod.lo \
@@ -833,9 +845,20 @@ src/fortran/slatec/dlngam.f \
 src/fortran/slatec/balanc.f
 
 LINPACK_SOURCES = src/fortran/linpack/dgesl.f \
-   src/fortran/linpack/wpade.f \
-   src/fortran/linpack/wcopy.f \
-   src/fortran/linpack/dgefa.f
+	src/fortran/linpack/wpade.f \
+	src/fortran/linpack/wcopy.f \
+	src/fortran/linpack/dgefa.f \
+	src/fortran/linpack/dgbfa.f \
+	src/fortran/linpack/dgeco.f \
+	src/fortran/linpack/dgedi.f \
+	src/fortran/linpack/dqrdc.f \
+	src/fortran/linpack/dqrsl.f \
+	src/fortran/linpack/dqrsm.f \
+	src/fortran/linpack/hhdml.f \
+	src/fortran/linpack/spofa.f \
+	src/fortran/linpack/wgeco.f \
+	src/fortran/linpack/wgefa.f \
+	src/fortran/linpack/wgesl.f   
 
 ELEMENTARIES_FUNCTIONS_FORTRAN_SOURCES = \
 src/fortran/psi.f \
@@ -969,7 +992,8 @@ src/fortran/rat.f \
 src/fortran/ribesl.f \
 src/fortran/rjbesl.f \
 src/fortran/rkbesl.f \
-src/fortran/rybesl.f
+src/fortran/rybesl.f \
+src/fortran/sdot.f
 
 GATEWAY_C_SOURCES = sci_gateway/c/sci_isequal.c \
 sci_gateway/c/sci_matrix.c \
@@ -2186,6 +2210,39 @@ libscielementary_functions_la-wcopy.lo: src/fortran/linpack/wcopy.f
 libscielementary_functions_la-dgefa.lo: src/fortran/linpack/dgefa.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dgefa.lo `test -f 'src/fortran/linpack/dgefa.f' || echo '$(srcdir)/'`src/fortran/linpack/dgefa.f
 
+libscielementary_functions_la-dgbfa.lo: src/fortran/linpack/dgbfa.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dgbfa.lo `test -f 'src/fortran/linpack/dgbfa.f' || echo '$(srcdir)/'`src/fortran/linpack/dgbfa.f
+
+libscielementary_functions_la-dgeco.lo: src/fortran/linpack/dgeco.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dgeco.lo `test -f 'src/fortran/linpack/dgeco.f' || echo '$(srcdir)/'`src/fortran/linpack/dgeco.f
+
+libscielementary_functions_la-dgedi.lo: src/fortran/linpack/dgedi.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dgedi.lo `test -f 'src/fortran/linpack/dgedi.f' || echo '$(srcdir)/'`src/fortran/linpack/dgedi.f
+
+libscielementary_functions_la-dqrdc.lo: src/fortran/linpack/dqrdc.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dqrdc.lo `test -f 'src/fortran/linpack/dqrdc.f' || echo '$(srcdir)/'`src/fortran/linpack/dqrdc.f
+
+libscielementary_functions_la-dqrsl.lo: src/fortran/linpack/dqrsl.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dqrsl.lo `test -f 'src/fortran/linpack/dqrsl.f' || echo '$(srcdir)/'`src/fortran/linpack/dqrsl.f
+
+libscielementary_functions_la-dqrsm.lo: src/fortran/linpack/dqrsm.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dqrsm.lo `test -f 'src/fortran/linpack/dqrsm.f' || echo '$(srcdir)/'`src/fortran/linpack/dqrsm.f
+
+libscielementary_functions_la-hhdml.lo: src/fortran/linpack/hhdml.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-hhdml.lo `test -f 'src/fortran/linpack/hhdml.f' || echo '$(srcdir)/'`src/fortran/linpack/hhdml.f
+
+libscielementary_functions_la-spofa.lo: src/fortran/linpack/spofa.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-spofa.lo `test -f 'src/fortran/linpack/spofa.f' || echo '$(srcdir)/'`src/fortran/linpack/spofa.f
+
+libscielementary_functions_la-wgeco.lo: src/fortran/linpack/wgeco.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-wgeco.lo `test -f 'src/fortran/linpack/wgeco.f' || echo '$(srcdir)/'`src/fortran/linpack/wgeco.f
+
+libscielementary_functions_la-wgefa.lo: src/fortran/linpack/wgefa.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-wgefa.lo `test -f 'src/fortran/linpack/wgefa.f' || echo '$(srcdir)/'`src/fortran/linpack/wgefa.f
+
+libscielementary_functions_la-wgesl.lo: src/fortran/linpack/wgesl.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-wgesl.lo `test -f 'src/fortran/linpack/wgesl.f' || echo '$(srcdir)/'`src/fortran/linpack/wgesl.f
+
 libscielementary_functions_la-psi.lo: src/fortran/psi.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-psi.lo `test -f 'src/fortran/psi.f' || echo '$(srcdir)/'`src/fortran/psi.f
 
@@ -2581,6 +2638,9 @@ libscielementary_functions_la-rkbesl.lo: src/fortran/rkbesl.f
 
 libscielementary_functions_la-rybesl.lo: src/fortran/rybesl.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-rybesl.lo `test -f 'src/fortran/rybesl.f' || echo '$(srcdir)/'`src/fortran/rybesl.f
+
+libscielementary_functions_la-sdot.lo: src/fortran/sdot.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-sdot.lo `test -f 'src/fortran/sdot.f' || echo '$(srcdir)/'`src/fortran/sdot.f
 
 libscielementary_functions_la-sci_f_isequal.lo: sci_gateway/fortran/sci_f_isequal.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-sci_f_isequal.lo `test -f 'sci_gateway/fortran/sci_f_isequal.f' || echo '$(srcdir)/'`sci_gateway/fortran/sci_f_isequal.f
