--- a/scilab/modules/functions/Makefile.am
+++ b/scilab/modules/functions/Makefile.am
@@ -32,6 +32,7 @@ libscifunctions_la_CFLAGS=		-I$(srcdir)/includes/ \
 				-I$(top_srcdir)/modules/output_stream/includes \
 				-I$(top_srcdir)/modules/api_scilab/includes \
 				-I$(top_srcdir)/modules/fileio/includes \
+				-I$(top_srcdir)/modules/call_scilab/includes \
 				-I$(top_srcdir)/modules/io/includes \
 				-I$(top_srcdir)/modules/string/includes \
 				-I$(top_srcdir)/modules/localization/includes
