--- a/scilab/modules/core/src/fortran/core_f2c.vcproj
+++ b/scilab/modules/core/src/fortran/core_f2c.vcproj
@@ -6,6 +6,7 @@
 	ProjectGUID="{C352587B-F5E4-457C-80EE-A1AEAB176C8E}"
 	RootNamespace="core_f2c"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="0"
 	>
 	<Platforms>
 		<Platform
@@ -723,10 +724,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\sci_gateway\fortran\sci_whereis.c"
-				>
-			</File>
-			<File
 				RelativePath=".\seteol.c"
 				>
 			</File>
@@ -1224,10 +1221,6 @@
 			</File>
 			<File
 				RelativePath="..\..\sci_gateway\fortran\sci_useascommand.f"
-				>
-			</File>
-			<File
-				RelativePath="..\..\sci_gateway\fortran\sci_whereis.f"
 				>
 			</File>
 			<File
