--- a/scilab/modules/elementary_functions/Makefile.in
+++ b/scilab/modules/elementary_functions/Makefile.in
@@ -206,7 +206,9 @@ am__objects_2 = libscielementary_functions_la-dgesl.lo \
 	libscielementary_functions_la-spofa.lo \
 	libscielementary_functions_la-wgeco.lo \
 	libscielementary_functions_la-wgefa.lo \
-	libscielementary_functions_la-wgesl.lo
+	libscielementary_functions_la-wgesl.lo \
+	libscielementary_functions_la-dpofa.lo \
+	libscielementary_functions_la-util.lo
 am__objects_3 = libscielementary_functions_la-sci_tools.lo \
 	libscielementary_functions_la-finite.lo \
 	libscielementary_functions_la-vfinite.lo \
@@ -858,7 +860,9 @@ LINPACK_SOURCES = src/fortran/linpack/dgesl.f \
 	src/fortran/linpack/spofa.f \
 	src/fortran/linpack/wgeco.f \
 	src/fortran/linpack/wgefa.f \
-	src/fortran/linpack/wgesl.f   
+	src/fortran/linpack/wgesl.f \
+	src/fortran/linpack/dpofa.f \
+	src/fortran/linpack/util.f
 
 ELEMENTARIES_FUNCTIONS_FORTRAN_SOURCES = \
 src/fortran/psi.f \
@@ -2241,6 +2245,12 @@ libscielementary_functions_la-wgefa.lo: src/fortran/linpack/wgefa.f
 
 libscielementary_functions_la-wgesl.lo: src/fortran/linpack/wgesl.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-wgesl.lo `test -f 'src/fortran/linpack/wgesl.f' || echo '$(srcdir)/'`src/fortran/linpack/wgesl.f
+
+libscielementary_functions_la-dpofa.lo: src/fortran/linpack/dpofa.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-dpofa.lo `test -f 'src/fortran/linpack/dpofa.f' || echo '$(srcdir)/'`src/fortran/linpack/dpofa.f
+
+libscielementary_functions_la-util.lo: src/fortran/linpack/util.f
+	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-util.lo `test -f 'src/fortran/linpack/util.f' || echo '$(srcdir)/'`src/fortran/linpack/util.f
 
 libscielementary_functions_la-psi.lo: src/fortran/psi.f
 	$(LIBTOOL) --tag=F77 $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(F77) $(libscielementary_functions_la_FFLAGS) $(FFLAGS) -c -o libscielementary_functions_la-psi.lo `test -f 'src/fortran/psi.f' || echo '$(srcdir)/'`src/fortran/psi.f
